@@ -2,7 +2,7 @@
 haldatadir = ${datadir}/hal/fdi/policy/20thirdparty
 haldata_DATA = 10-synce.fdi
 
-haldir = ${libexecdir}
+haldir = @hal_addon_dir@
 hal_SCRIPTS = \
 	hal-synce-rndis \
 	hal-synce-serial 
